--- a/RASD/requirements.sty
+++ b/RASD/requirements.sty
@@ -92,7 +92,7 @@
 \newcommand{\con}[4]
 {
     \stepcounter{rawidcounter}
-    \therawidcounter & #1 & #2 & #3 & #4\\ \hline
+    r\therawidcounter & G.#1 & R.#2 & UC.#3 & #4\\ \hline
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -130,15 +130,15 @@
 \newcommand{\newgoal}[1]
 {
     \refstepcounter{goalcounter}
-    \ding{73} \textbf{GOAL -\thegoalcounter} \label{#1}#1\\ 
+    \ding{73} \textbf{GOAL -\thegoalcounter} \label{#1}#1\\
 }
 
 \newcommand{\requirement}[1]{
-    \ding{229} \textbf{REQ -\ref{#1}} #1\\ 
+    \item \ding{229} \textbf{REQ -\ref{#1}} #1\\ 
 }
 
 \newcommand{\assumption}[1]{
-    \ding{70} \textbf{A -\ref{#1}} #1\\ 
+    \item \ding{70} \textbf{A -\ref{#1}} #1\\
 }
 
 \newcommand{\goal}[1]{
