Brief: definitions, data structures Modified: - Some definitions Fixed: - Errors about data structures on goals

--- a/RASD/requirements.sty
+++ b/RASD/requirements.sty
@@ -134,11 +134,11 @@
 }
 
 \newcommand{\requirement}[1]{
-    \item \ding{229} \textbf{REQ -\ref{#1}} #1\\ 
+    \ding{229} \textbf{REQ -\ref{#1}} #1\\ 
 }
 
 \newcommand{\assumption}[1]{
-    \item \ding{70} \textbf{A -\ref{#1}} #1\\
+    \ding{70} \textbf{A -\ref{#1}} #1\\
 }
 
 \newcommand{\goal}[1]{
