--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -10,6 +10,7 @@
 \usepackage{enumitem}
 \usepackage{listings}
 \usepackage{xcolor}
+\usepackage{scrextend}
 \usepackage{pifont}
 
 \definecolor{commentgreen}{RGB}{2,112,10}
@@ -88,13 +89,11 @@
         
         \newgoal{Allow a Guest to register as an Individual.}
         
-        \newgoal{Allow a Guest to register as an Third-Party.}
+        \newgoal{Allow a Guest to register as a Third-Party.}
         
         \newgoal{The Guest should be able to sign in into the application.}
         
-        \newgoal{The User should be able to change his username.}
-        
-        \newgoal{The User should be able to change his password.}
+        \newgoal{The User should be able to change his credentials.}
         
         \newgoal{The User should be able to log-out from the system.}
         
@@ -149,9 +148,9 @@
             \subsubsection{Definition of Terms}
             This document uses several terms that might be more loosely used elsewhere. These terms are defined here as they will be used later on in this document.
                 \begin{description}
-                    \item[\textbf{Subscribed User}] an individual for which one or more third party have done a request accepted by the individual itself
+                    \item[\textbf{Subscribed User}] an Individual for which one Third Party whom asked to subscribe to the data has accepted the Third Party's request
                     
-                    \item[\textbf{External Device}] an external device such as a smart-watch or similar devices
+                    \item[\textbf{External Device}] a device such as a smart-watch or similar, capable of data acquisition
                     
                     \item[\textbf{Run}] a competition organized and managed by an \textit{Organizer} to which \textit{Athletes} and \textit{Spectators} can enroll as participant or watchers
                     
@@ -159,7 +158,9 @@
                     
                     \item[\textbf{Run Created}] a competition with any number of \textit{Athletes} enrolled
                     
-                    \item[\textbf{Map}] The map of the predefined track of the run with athletes' positions
+                    \item[\textbf{Track}] A route where athletes will compete in a specific \textit{Run}
+                    
+                    \item[\textbf{Map}] A \textit{Track} that display all \textit{Athletes} position in a specific \textit{Run}
                     
                     \item[Accident] An event triggered when the monitored user's parameter overcome certain thresholds
                     
@@ -388,251 +389,183 @@
 
 \newpage
 \subsection{Functional Requirements}
+    \newcommand{\indentsize}{1cm}
         
     \goal{Allow a Guest to register as an Individual.}
         
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{A customer not signed-on must be able to begin the Individual's registration process to TrackMe providing a username, a password and his personal data.}
-        
         \assumption{Username is not already taken.}
-        
         \assumption{Password is valid (i.e.: at least 8 alphanumerical characters).}
-        
         \assumption{The field "Password" and "Repeat Password" match.}
-        
         \assumption{Data provided by the individual, such as email and SSN, are valid.}
-        
         \assumption{The individual has approved TrackMe' terms of use.}
-        \end{description}
+        \end{addmargin}
         
-    \goal{Allow a Guest to register as an Third-Party.}
-        \begin{description}
+    \goal{Allow a Guest to register as a Third-Party.}
+        \begin{addmargin}{\indentsize}
         \newrequirement{A customer not signed-on must be able to begin the Third Party's registration process to TrackMe providing a username, a password and its organization data.}
-        
         \assumption{Username is not already taken.}
-        
         \assumption{Password is valid (i.e.: at least 8 alphanumerical characters).}
-        
         \assumption{The field "Password" and "Repeat Password" match.}
-        
         \assumption{Data provided by the Third-Party (i.e: VAT number) are valid.}
-        
         \assumption{The individual has approved TrackMe' terms of use.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Guest should be able to sign in into the application.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{The system must provide a log-in interface for already registered users, not previously signed into the application.}
-        
         \assumption{The user is already registered.}
-        
         \assumption{Username and password provided match the ones previously stored in the registration process.}
-        \end{description}
+        \end{addmargin}
 
-    \goal{The User should be able to change his username.}
-        \begin{description}
+    \goal{The User should be able to change his credentials.}
+        \begin{addmargin}{\indentsize}
         \newrequirement{TrackMe must provide to users the possibility to change their username.}
-        
-        \assumption{The user is logged in the system.}
-        
-        \assumption{Username is not already taken.}
-        \end{description}
-
-    \goal{The User should be able to change his password.}
-        \begin{description}
         \newrequirement{TrackMe must provide to registered users the possibility to change their password.}
-        
-        \assumption{Username and password provided match the ones previously stored in the registration process.}
-        
         \assumption{The user is logged in the system.}
-        \end{description}
+        \assumption{Username and password provided match the ones previously stored in the registration process.}
+        \assumption{Username is not already taken.}
+        \end{addmargin}
         
     \goal{The User should be able to log-out from the system.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{The system must provide the possibility to the user of logging out.}
-        
         \assumption{The user is logged in the system.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Individual should be able to change his personal data.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{The system must provide the possibility to change Individual's personal data.}
-        
         \assumption{Data provided by the individual, such as email and SSN, are valid.}
-       
         \assumption{The user is logged in the system.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Third-Party should be able to change his organization data.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{The system must provide the possibility to change Third Party's 
         organization data.}
-        
         \assumption{Data provided by the Third-Party (i.e: VAT number) are valid.}
-        
         \assumption{The user is logged in the system.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Third-Party should be able to send requests to the Individuals.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Data4help must allow the Third-Parties to send a request to a particular individual, provided his SSN/FC.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{The Third-Party provides a SSN/FC of an individual already registered into the system.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Third-Party should be able to make group requests.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Data4help must allow the Third-Parties to generated a request for a group of individuals.}
-        
         \newrequirement{The system must be able to anonymize users' requested data.}
-        
         \assumption{The user is logged in the system.}
-       
         \assumption{The Third-Party provides not contradictory criteria for the selection of the group of individuals.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Third-Party should be able to subscribe to new data, once an Individual request is made.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Data4help must allow the Third-Parties to choose if subscribe to new data associated with a particular Individual.}
-        
         \newrequirement{The system must be able to periodically query the database in order to get new data as soon as they are produced.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{The Third-Party has sent at least a request to the user whose data she wants to subscribe.}
-        
         \assumption{The individual has received an individual request a specific Third Party.}
-        
         \assumption{The individual has accepted the individual request.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Third Party should be able to view Individual's data to whom has sent a request.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Data4help must allow the Third Party to see a list of sent requests and related Individual's data.}
-        
         \assumption{The user is logged in the system.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Individual should be able to accept or reject a request coming from a Third-Party.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Data4help must allow the Individual to see a list of the received requests from Third Parties.}
-        
         \newrequirement{Data4help must allow the Individual to accept or reject a request from the list.}
-        
         \assumption{The user is logged in the system.}
-       
         \assumption{The individual has received at least an individual request.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Individual shall be able connect an external device to the system.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Data4help must allow the Individual to connect an external device through BT or NFC.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{The external device provided by the user is compatible with the system.}
-        
         \assumption{The user has activated NFC/Bluetooth on the mobile device.}
-        
         \assumption{The user has activated NFC/Bluetooth on the external device.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Third-Party shall be able to activate Automated-SOS service.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{The system must allow the Third-Party to activate Automated-SOS service.}
-        
         \newrequirement{The system must be able to assign an ambulance dispatcher to the SOS service.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{At least one ambulance dispatcher is available for SOS request serving.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Individual shall be able to activate Automated-SOS service.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{The system must allow the Individual to activate Automated-SOS service.}
-        
         \newrequirement{The system should allow the Individual to choose between third parties who has enabled the service.}
-        
         \assumption{The user is logged in the system.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Dispatcher shall be able to assign an ambulance to an incident.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{The system must be able to get the Individual position.}
-        
         \newrequirement{The system must be able to send the position to the nearest ambulance.}
-        
         \assumption{An Automated-SOS service is enabled from at least one Third Party.}
-        
         \assumption{At least one ambulance dispatcher is available for SOS request serving.}
-        
         \assumption{The dispatcher is able to communicate with both the individual and the ambulance associated with the accident.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Organizer shall be able to create a run.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Track4Run must allow the organizer to create a run with a date, time, duration and a path.}
-        
         \newrequirement{The system must provide an interface that allows the user to define a path on an interactive map.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{The organizer defines a not empty path.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Organizer should be able to start a run.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Track4Run must allow the organizer to start a run previously created.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{The Organizer has already created a run.}
-        
         \assumption{At least two athletes are enrolled in the run.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Organizer should be able to delete a run.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Track4Run must allow the organizer to delete a run previously created.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{The Organizer has already created a run.}
-        
         \assumption{The run has not been started.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Athlete should be able to enroll a run.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Track4Run must allow the Athlete to enroll to an already existing run.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{There is at least one created run.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Athlete should be able to unroll a run.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Track4Run must allow the Athlete to unroll a run.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{The Athlete is enrolled to at least one run.}
-        \end{description}
+        \end{addmargin}
         
     \goal{The Spectator should be able to watch a run.}
-        \begin{description}
+        \begin{addmargin}{\indentsize}
         \newrequirement{Track4Run must allow the Spectator to see the position of the Athletes on a map during a run.}
-        
         \assumption{The user is logged in the system.}
-        
         \assumption{There is at least one started run.}
-        \end{description}
-        
-        \subsubsection{Use Cases Diagrams}
+        \end{addmargin}
+    \subsubsection{Use Cases Diagrams}
         
         \begin{figure}[!htpb]
     	\centering
@@ -948,7 +881,7 @@
                 {\ref{A customer not signed-on must be able to begin the Individual's registration process to TrackMe providing a username, a password and his personal data.}}
                 {\ref{Individual Registration}}
                 {}
-            \con{\ref{Allow a Guest to register as an Third-Party.}}
+            \con{\ref{Allow a Guest to register as a Third-Party.}}
                 {\ref{A customer not signed-on must be able to begin the Third Party's registration process to TrackMe providing a username, a password and its organization data.}}
                 {\ref{Third Party Registration}}
                 {}
@@ -956,7 +889,7 @@
                 {\ref{The system must provide a log-in interface for already registered users, not previously signed into the application.}}
                 {\ref{Log-in}}
                 {}
-            \con{\ref{The User should be able to change his username.}}
+            \con{\ref{The User should be able to change his credentials.}}
                 {\ref{TrackMe must provide to users the possibility to change their username.}}
                 {\ref{User Changes Username}}
                 {}
